<resources>
    <string name="app_name">Be Eye</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  네비  -->
    <string name="fragment_home">홈</string>
    <string name="fragment_radio">음성 녹음</string>

    <!--  홈  -->
    <string name="home_lan_tmp">한국어로 번역해드려요!👀</string>
    <string name="home_btn_record">음성 녹음</string>
    <string name="home_btn_camera">카메라</string>
    <string name="home_btn_gallery">이미지</string>

    <!-- 다이얼로그   -->
    <string name="dialog_permission">해당 기능을 활용하려면 <b>권한</b>이 필요합니다!🙇‍</string>
    <string name="dialog_btn_yes">확인</string>

    <!--  음성  -->
    <string name="radio_play">듣기</string>
    <string name="radio_stop">멈춤</string>
    <string name="radio_finish">종료</string>
    <string name="radio_status_play">듣는 중..👂🏻</string>
    <string name="radio_status_stop">듣기를 눌러 주세요!👂🏻</string>

</resources>