<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    tools:context=".ui.view.home.HomeFragment">
    <TextView
        android:id="@+id/txt_main_language"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/home_lan_tmp"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btn_main_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_record"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bd_common_btn"
        android:text="@string/home_btn_record"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_main_language"
        app:layout_constraintBottom_toTopOf="@id/btn_main_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_main_camera"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bd_common_btn"
        android:text="@string/home_btn_camera"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@id/btn_main_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_main_record" />

    <Button
        android:id="@+id/btn_main_gallery"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bd_common_btn"
        android:text="@string/home_btn_gallery"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_main_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>