<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    tools:context=".ui.view.radio.RadioFragment">

    <TextView
        android:id="@+id/txt_radio_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/radio_status_stop"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/txt_radio_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txt_radio_content"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bd_content_result"
        android:padding="20dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_radio_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_radio_status" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_radio_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_common_btn"
        android:text="@string/radio_play"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_radio_stop"
        app:layout_constraintTop_toBottomOf="@id/txt_radio_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_radio_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_common_btn"
        android:text="@string/radio_stop"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_radio_play"
        app:layout_constraintEnd_toStartOf="@id/btn_radio_finish"
        app:layout_constraintStart_toEndOf="@id/btn_radio_play"
        app:layout_constraintTop_toTopOf="@id/btn_radio_play" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_radio_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_common_btn"
        android:text="@string/radio_finish"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_radio_play"
        app:layout_constraintStart_toEndOf="@id/btn_radio_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_radio_play" />



</androidx.constraintlayout.widget.ConstraintLayout>